tests/valid/src/special_methods.ri
struct SpecialMethods {
    func __destroy__(self) {
        _ = self;
    }
}
