tests/invalid/extend_primitive_types.ri
extend bool {
    func my_func(self) { _ = self; }
}

extend usize {
    func my_func(self) { _ = self; }
}
